Restore full parsing logic with multi-sheet support
FIXES:
- Restored all parsing functions for proper deposits/withdrawals formatting
- KEPT multi-sheet processing (processes ALL Excel sheets, not just first)
- Switched to production API token for better quality
- Reduced browser cache from 1 year to 5 minutes
- Added workbook validation and enhanced error handling

KEY FEATURES RESTORED:
- Proper deposits/withdrawals column separation
- Running balance calculation
- Date normalization to YYYY-MM-DD format
- 6-column bank statement format (Date, Check#, Description, Deposits, Withdrawals, Balance)
- Smart filtering of headers and category labels
- Enhanced date and amount detection

IMPROVEMENTS OVER PREVIOUS VERSION:
- Now processes ALL sheets in Excel workbook (not just first)
- Better logging for debugging multi-sheet PDFs
- Production API token for higher quality conversions
- Faster cache updates on production

This fixes the issue where:
1. All transactions showed as positive (no deposits/withdrawals separation)
2. Only one category appeared (Income) while others were ignored

--- a/netlify.toml
+++ b/netlify.toml
@@ -27,18 +27,18 @@
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
 
 [[headers]]
-  # Cache static assets
+  # Cache static assets - Reduced for faster updates
   for = "/*.css"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=300, must-revalidate"
 
 [[headers]]
   for = "/*.js"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=300, must-revalidate"
 
 [[headers]]
   for = "/*.svg"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=3600, immutable"
 
