Add diagnostic logging and improve Wells Fargo Excel parsing
- Add XLSX library verification at startup with detailed diagnostics
- Add comprehensive file processing logging for debugging
- Expand column detection to include more Wells Fargo specific headers
- Improve findColumnIndex with exact, partial, and word-boundary matching
- Add Content-Security-Policy header to allow XLSX/Chart.js CDN
- Log headers, data, and detected columns for troubleshooting
- Add detailed error logging when parsing fails

--- a/netlify.toml
+++ b/netlify.toml
@@ -56,6 +56,8 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
+    # Allow XLSX and Chart.js CDN scripts
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://www.google.com https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.instantdb.com https://v2.convertapi.com https://accounts.google.com https://apis.google.com; frame-src https://accounts.google.com https://www.google.com; img-src 'self' data: https:; object-src 'none'"
 
 [[headers]]
   # Cache CSS files
